--- a/src/pages/AddProduct/AddProduct.css
+++ b/src/pages/AddProduct/AddProduct.css
@@ -1,5 +1,5 @@
 .loginFrom {
-    height: 600px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
