add nav manu section and profile dropdown section

--- a/src/pages/Home/HomeCategory/HomeCategory.css
+++ b/src/pages/Home/HomeCategory/HomeCategory.css
@@ -44,4 +44,9 @@ end tab view =================================== */
     .homeCategory img{
        width: 100%;
     }
+    .homeCategory {
+        padding: 10px 0px;
+        margin: 10px 0px;
+       
+    }
 }
