--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -5,3 +5,7 @@
     font-weight: 700;
     color: orange!important;
 }
+.nav-search {
+    width: 300px!important;
+    margin-top: 10px!important;
+}
