--- a/src/pages/Home/HomeBanner/HomeBanner.css
+++ b/src/pages/Home/HomeBanner/HomeBanner.css
@@ -1,13 +1,15 @@
-.carousel{
+.carousel {
     width: 100%;
+    height: 100%;
 }
-@media only screen and (max-width:688px) {
 
-    .carousel{
+@media only screen and (max-width:688px) {
+    .carousel {
         width: 86%;
         margin: 10px auto;
         height: 200px;
     }
+
     .carousel img {
         height: 200px;
         border-radius: 10px;
